# portfolio-risk-copilot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
app/: analysis.py  copilot.py  main.py  market_data.py  risk.py  schemas.py  stress.py
examples/: ai_heavy_portfolio.json  balanced_portfolio.json  sample_report.md
frontend/: index.html
tests/: test_analysis.py  test_api.py  test_market_data.py  test_risk_engine.py  test_stress_and_copilot.py
